<resources>
    <string name="app_name">Fitness Application</string>
    <string name="goalDesc">Goal</string>
    <string name="workoutDesc">Workouts</string>
    <string name="nutritionDesc">Nutrition</string>
    <string name="meDesc">Me</string>
    <string name="profImg_string">Profile Picture</string>
    <string name="createProfile_String">Create Profile</string>
    <string name="goalWeight_String">Fitness Goal</string>
    <string name="goalWeightVal_String" />
    <string name="date_val" />
    <string name="currWeight_String">Weight</string>
    <string name="intake_string">Daily Calories</string>
    <string name="todaysWorkout_String">Daily Workout</string>
    <string name="workout_string">Workout</string>
    <string name="nameString">Name:</string>
    <string name="ageString">Age:</string>
    <string name="weightString">Weight:</string>
    <string name="heightString">Height:</string>
    <string name="confirmString">Confirm</string>
    <string name="nameHint"></string>
    <string name="ageHInt"></string>
    <string name="weightHint"></string>
    <string name="heightHint"></string>
    <string name="genderString">Gender:</string>
    <string name="maleString">Male</string>
    <string name="femaleString">Female</string>
    <string name="editString">Edit</string>
    <string name="saveString">Save</string>
    <string name="goalWeightString">Fitness Goal:</string>
    <string name="curWValString" />
    <string name="todayStepString">Daily Steps</string>
    <string name="todayStepsValString" />
    <string name="bmiString">BMI</string>
    <string name="bmiValString" />
    <string name="todayMilesString">Distance Traveled:</string>
    <string name="todayMilesValString" />
    <string name="bench_details">\u2022 Equipment: Barbel
        \n\u2022 Body-part: Chest
        \n\u2022 Target: Pectoralis Major Sternal Head
        \n\u2022 Synergist: Deltoid Anterior, Pectoralis Major Clavicular Head,\n\t Triceps Brachii</string>
    <string name="instructions">\u2022 Repetition: 8 - 12
        \n\u2022 Sets: 3
        \n\u2022 Rest: 45-60 seconds between sets.
    </string>
    <string name="doneString">Done</string>
    <string name="addFoodString">Add new food</string>
    <string name="food_nameString">food_name</string>
    <string name="calString">calAmount</string>
    <string name="servingString">servingAmount</string>
    <string name="foodSelectedString" />
    <string name="addNewFoodString">Add Food</string>
    <string name="nameOfFoodString" />
    <string name="nameOfFoodHint">Name of food</string>
    <string name="caloriesPerServingString">Calories per serving</string>
    <string name="calUnitString">cal</string>
    <string name="servingDescriptionString" />
    <string name="servingDescHint">Serving description</string>
    <string name="addFoodCancelString">Cancel</string>
    <string name="addFoodSaveString">Save</string>
    <string name="bfastValueString" />
    <string name="lunchValString" />
    <string name="dinnerValString" />
    <string name="snacksValString" />
    <string name="bmrString">Basal Metabolic Rate (BMR)</string>
    <string name="sedentaryString">Little or no exercise</string>
    <string name="lightString">Exercise 1-3 times/week</string>
    <string name="moderateString">Exercise 4-5 times/week</string>
    <string name="activeString">Daily or intense exercise 3-4 times/week</string>
    <string name="activityString">Activity</string>
    <string name="veryActiveString">Intense exercise 6-7 times/week</string>
    <string name="veryIntenseString">Very intense exercise daily, or physical job</string>
    <string name="fitnessLogoString">Pursuit Fitness</string>
    <string name="workoutListString" />
    <string name="calPercentString" />
    <string name="calRatioString" />
    <string name="nutritionString">Nutrition</string>
    <string name="foodString">Add Food</string>
    <string name="workoutCompleteString">Workout Complete</string>
    <string name="cancelWorkoutString">Cancel Workout</string>
    <string name="goal1">Mild weight loss</string>
    <string name="goal2String">Weight loss</string>
    <string name="goal3String">Extreme weight loss</string>
    <string name="goal4String">Mild weight gain</string>
    <string name="goal5String">Weight gain</string>
    <string name="goal6String">Extreme weight gain</string>
    <string name="maintainString">Maintain Weight</string>
    <string name="basicInfoString">Basic Info</string>
    <string name="actPrefString">Activity Preferences</string>
    <string name="targetStepsString">Target steps</string>
    <string name="lbUnitString">lb</string>
    <string name="inUnitString">in</string>
    <string name="stepsDailyString">steps / day</string>
    <string name="helloString">Hello!</string>
    <string name="barGraphBackString">Back</string>
    <string name="graphDataString">Steps Bar Chart Last 7 days</string>
    <string name="foodHistoryString">Food Consumption History</string>
    <string name="foodHistoryBackString">Back</string>
    <string name="exerciseHistoryString">Exercise History</string>
    <string name="foodNameDataString">food_name_data</string>
    <string name="cal_data_string">cal_data</string>
    <string name="serving_data_string">serving_data</string>
    <string name="date_data_string">date_data</string>
    <string name="type_data_string">type_data</string>

    <string-array name="food_name">
        <item>Banana</item>
        <item>Watermelon</item>
        <item>StrawBerries</item>
        <item>Fried Egg</item>
        <item>Skinless Chicken Breast</item>
        <item>Coffee with Cream and Sugar</item>
        <item>Coffee</item>
        <item>Water</item>
        <item>Coca-Cola</item>
        <item>2% Fat Milk</item>
    </string-array>
    <string-array name="serving_size">
        <item>1 medium(7" to 7-7/8" long)</item>
        <item>1 cup, diced (152 g)</item>
        <item>1 cup, halves (152 g)</item>
        <item>1 large (46 g)</item>
        <item>1 breast, bone and skin removed (118g)</item>
        <item>1 coffee cup (6 fl oz)</item>
        <item>1 mug (8 fl oz)</item>
        <item>1 cup (8 fl oz)</item>
        <item>1 serving(12 oz)</item>
        <item>1 cup (244 g)</item>
    </string-array>
    <string-array name="food_calories">
        <item>105</item>
        <item>46</item>
        <item>49</item>
        <item>89</item>
        <item>130</item>
        <item>50</item>
        <item>2</item>
        <item>0</item>
        <item>140</item>
        <item>122</item>

    </string-array>


    <string-array name="fitness_workout">
        <item>Lat Pulldown</item>
        <item>Bent Over Lateral Raise</item>
        <item>Pull Ups</item>
        <item>Dumbell Row</item>
        <item>Bench Press</item>
        <item>Dumbell Press</item>
        <item>Cable Fly</item>
        <item>Dumbell Pullover</item>
        <item>Military Press</item>
        <item>Shoulder Press</item>
        <item>Lateral Raise</item>
        <item>Upright Row</item>
        <item>Bicep Curls</item>
        <item>Concentration Curls</item>
        <item>Triceps Press</item>
        <item>Dips</item>
        <item>Squat</item>
        <item>Side Squat</item>
        <item>Lunges</item>
        <item>Sumo Squat</item>

    </string-array>
</resources>